# najot_talim

./: .gitignore  README.md  pyproject.toml  setup.sh
dec01/homework/: db.sqlite3
dec03/homework/: db.sqlite3
dec05/homework/: CRUD_IMPLEMENTATION.md  QUICK_START.md  db.sqlite3
dec08/homework/: db.sqlite3
dec12/exam/: db.sqlite3  pyproject.toml
dec15/homework/: db.sqlite3
dec17/homework/: db.sqlite3
dec19/: README.md  manage.py  requirements.txt
dec19/shop/: __init__.py  settings.py  urls.py  wsgi.py
dec19/store/: __init__.py  admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
dec19/templates/: base.html  home.html
dec19/users/: forms.py  urls.py  views.py
dec22/blog/: admin.py  models.py  urls.py  views.py
dec22/config/: settings.py  urls.py
dec22/pages/: urls.py  views.py
dec22/templates/: base.html  blog-archive.html  index.html  page-404.html  page-contact.html  page-login.html  page-portfolio.html  page-signup.html  portfolio-details.html
dec24/config/: settings.py  urls.py
dec24/shop/: models.py  urls.py  views.py
dec24/templates/: about.html  base.html  contact.html  index.html  login.html  shop-single-product.html  shop.html
dec26/: data_backup.json  db.sqlite3.backup  shop_backup.json
dec26/cart/: admin.py  context_processors.py  models.py  order_models.py  urls.py  views.py
dec26/config/: settings.py  urls.py
dec26/shop/: admin.py  models.py  urls.py  views.py
dec26/templates/: account.html  account_edit.html  base.html  cart.html  index.html  login.html  order-confirmation.html  orders.html  register.html  shop-checkout-old.html  shop-checkout.html  shop-products.html  shop-single-product.html  shop-wishlist.html  shop.html
dec26/user/: forms.py  models.py  urls.py  views.py
feb04/accounts/: models.py  serializers.py  urls.py  views.py
feb04/conf/: settings.py  urls.py
feb11/: requirements.txt
feb20/: requirements.txt
feb25/: auth.py  auth_router.py  computer_router.py  crud.py  database.py  main.py  models.py  schemas.py
jan14/: .gitignore
mar01/: database.py  main.py  models.py  requirements.txt  schemas.py  security.py
mar02/: __init__.py  database.py  main.py  models.py  schemas.py  security.py  services.py
mar04/: __init__.py  database.py  deps.py  main.py  models.py  requirements.txt  schemas.py  services.py
nov21/: lesson.py
nov26/homework/BlogCMS/: pyproject.toml
nov26/homework/BlogCMS/BlogCMS/: asgi.py  settings.py  urls.py  wsgi.py
nov26/homework/BlogCMS/posts/: urls.py  views.py
nov26/homework/BlogCMS/users/: urls.py  views.py
nov26/homework/BlogCMS/videos/: apps.py  urls.py  views.py
(+489 files in other folders)
